[gd_scene load_steps=5 format=3 uid="uid://dfomnhk6tame2"]

[ext_resource type="Script" path="res://game/entities/base_entity/melee_attack_module.gd" id="1_mrok2"]
[ext_resource type="Script" path="res://game/entities/base_entity/base_entity_attack_animated_sprite.gd" id="1_rca1v"]

[sub_resource type="CircleShape2D" id="CircleShape2D_416nb"]
radius = 18.0

[sub_resource type="CircleShape2D" id="CircleShape2D_fx4s6"]
radius = 9.0

[node name="MeleeAttackModule" type="Node2D"]
scale = Vector2(1, 0.5)
script = ExtResource("1_mrok2")

[node name="AttackCooldownTimer" type="Timer" parent="."]
one_shot = true

[node name="MeleeAttackArea" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 0

[node name="MeleeAttackAreaCollisionShape" type="CollisionShape2D" parent="MeleeAttackArea"]
shape = SubResource("CircleShape2D_416nb")

[node name="MeleeAttackBox" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 0
monitoring = false
monitorable = false

[node name="AttackAnimatedSprite" type="AnimatedSprite2D" parent="MeleeAttackBox"]
offset = Vector2(0, -24)
script = ExtResource("1_rca1v")

[node name="AttackBoxCollisionShape" type="CollisionShape2D" parent="MeleeAttackBox"]
position = Vector2(0, -9)
shape = SubResource("CircleShape2D_fx4s6")

[connection signal="timeout" from="AttackCooldownTimer" to="." method="_on_attack_cooldown_timer_timeout"]
[connection signal="body_entered" from="MeleeAttackBox" to="." method="_on_melee_attack_box_body_entered"]
[connection signal="animation_finished" from="MeleeAttackBox/AttackAnimatedSprite" to="MeleeAttackBox/AttackAnimatedSprite" method="_on_animation_finished"]
